add knowledge base
